feat(jdbc): add rollback when query fails
implement savepoint and rollback when one query fails

add unit test to verify transactional query